--- a/bootcamp/labs/templates/labs/drafts.html
+++ b/bootcamp/labs/templates/labs/drafts.html
@@ -8,7 +8,7 @@
 
 {% block main %}
   <ol class="breadcrumb">
-    <li><a href="{% url 'projects' %}">{% trans 'projects' %}</a></li>
+    <li><a href="{% url 'labs' %}">{% trans 'Labs' %}</a></li>
     <li class="active">{% trans 'Drafts' %}</li>
   </ol>
   <table class="table table-striped">
