--- a/bootcamp/labs/templates/labs/labs.html
+++ b/bootcamp/labs/templates/labs/labs.html
@@ -2,7 +2,7 @@
 {% load staticfiles %}
 {% load i18n %}
 
-{% block title %} {% trans 'Projects' %} {% endblock %}
+{% block title %} {% trans 'Labs' %} {% endblock %}
 
 {% block head %}
 	<link rel="shortcut icon" type="image/png" href="/media/images/favicon.png">
@@ -39,13 +39,13 @@ $(document).ready(function() {
 
 {% block main %}
 
-	
+	<!-- Only Lab Manager should be able to add new labs! -->
   <div class="page-header">
     <a href="{% url 'write' %}" class="btn btn-primary pull-right">
-      <span class="glyphicon glyphicon-pencil"></span> {% trans 'Write project' %}
+      <span class="glyphicon glyphicon-pencil"></span> {% trans 'Add Lab' %}
     </a>
     <a href="{% url 'drafts' %}" class="btn btn-default pull-right" style="margin-right: .8em">{% trans 'Drafts' %}</a>
-    <h1>{% trans 'Projects' %}</h1>
+    <h1>{% trans 'Labs' %}</h1>
   </div>
   <div class="row">
     <div class="col-md-10">
@@ -59,7 +59,7 @@ $(document).ready(function() {
       {% endif %}
       <section class="projects">
       <br><br>
-      {% if projects|length != 0 %}
+      {% if labs|length != 0 %}
       	<table id="example" class="table table-striped table-bordered" cellspacing="0" width="100%">
       <thead>
             <tr>
@@ -74,8 +74,8 @@ $(document).ready(function() {
             </tr>
         </thead>
         <tbody>
-        {% for project in projects %}
-          {% include 'projects/partial_project_table.html' with project=project %}
+        {% for lab in labs %}
+          {% include 'labs/partial_lab_table.html' with lab=lab %}
         {% endfor %}
         
         </tbody>
@@ -83,7 +83,7 @@ $(document).ready(function() {
       {% else %}
       
 	    
-          <h4 class="no-data">{% trans 'There is no published project yet' %}. <a href="{% url 'write' %}">{% trans 'Be the first one to publish' %}!</a></h4>
+          <h4 class="no-data">{% trans 'Currently No Lab exists in the system. Please contact admin' %}.</h4>
         {% endif %}
       </section>
     </div>
@@ -96,7 +96,7 @@ $(document).ready(function() {
   </div>
   <div class="row">
     <div class="col-md-12">
-      {% include 'paginator.html' with paginator=projects %}
+      {% include 'paginator.html' with paginator=labs %}
     </div>
   </div>
 {% endblock main %}
