--- a/bootcamp/labs/templates/labs/write.html
+++ b/bootcamp/labs/templates/labs/write.html
@@ -3,7 +3,7 @@
 {% load i18n %}
 
 {% block head %}
-  <script src="{% static 'js/projects.js' %}"></script>
+  <script src="{% static 'js/labs.js' %}"></script>
 {% endblock head %}
 
 {% block main %}
@@ -42,8 +42,8 @@
 	
 
   <ol class="breadcrumb">
-    <li><a href="{% url 'projects' %}">{% trans 'projects' %}</a></li>
-    <li class="active">{% trans 'Write project' %}</li>
+    <li><a href="{% url 'labs' %}">{% trans 'labs' %}</a></li>
+    <li class="active">{% trans 'Add lab' %}</li>
   </ol>
   <form action="{% url 'write' %}" method="post" role="form">
     {% csrf_token %}
@@ -110,7 +110,7 @@
       <button type="button" class="btn btn-primary publish">{% trans 'Publish' %}</button>
       <button type="button" class="btn btn-default draft">{% trans 'Save Draft' %}</button>
       <button type="button" class="btn btn-default preview" data-toggle="modal" data-target="#preview">{% trans 'Preview' %}</button>
-      <a href="{% url 'projects' %}" class="btn btn-default">{% trans 'Cancel' %}</a>
+      <a href="{% url 'labs' %}" class="btn btn-default">{% trans 'Cancel' %}</a>
     </div>
   </form>
 
@@ -119,7 +119,7 @@
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-          <h4 class="modal-title">Project Preview</h4>
+          <h4 class="modal-title">Lab Preview</h4>
         </div>
         <div class="modal-body"></div>
         <div class="modal-footer">
