--- a/bootcamp/templates/base.html
+++ b/bootcamp/templates/base.html
@@ -41,6 +41,7 @@
                 </li>
                 <li><a href="{% url 'feeds' %}">{% trans 'Feed' %}</a></li>
                 <li><a href="{% url 'projects' %}">{% trans 'Projects' %}</a></li>
+                <li><a href="{% url 'devices' %}">{% trans 'Devices' %}</a></li>
                 <li><a href="{% url 'questions' %}">{% trans 'Q&A' %}</a></li>
                 <li><a href="{% url 'network' %}">{% trans 'My Network' %}</a></li>
               </ul>
