--- a/bootcamp/labs/templates/labs/labs.html
+++ b/bootcamp/labs/templates/labs/labs.html
@@ -14,7 +14,7 @@
 	
 	</style>
 
-  <link href="{% static 'css/projects.css' %}" rel="stylesheet">
+  <link href="{% static 'css/labs.css' %}" rel="stylesheet">
   <script type="text/javascript" src="/media/js/site.js?_=9a83ad61fa12260d710e54eb5f3203dc">
 	</script>
 	<script type="text/javascript" src="/media/js/dynamic.php?comments-page=examples%2Fstyling%2Fbootstrap.html" async>
@@ -57,7 +57,7 @@ $(document).ready(function() {
           </div>
         {% endfor %}
       {% endif %}
-      <section class="projects">
+      <section class="labs">
       <br><br>
       {% if labs|length != 0 %}
       	<table id="example" class="table table-striped table-bordered" cellspacing="0" width="100%">
