--- a/bootcamp/labs/templates/labs/partial_lab.html
+++ b/bootcamp/labs/templates/labs/partial_lab.html
@@ -1,32 +1,32 @@
-<project>
-  <h2><a href="{% url 'project' project.slug %}">{{ project.title }}</a></h2>
+<lab>
+  <h2><a href="{% url 'lab' lab.slug %}">{{ lab.title }}</a></h2>
   
   
   <div class="info">
     <span class="date">
       <span class="glyphicon glyphicon-calendar"></span>
-      {{ project.create_date }}
+      {{ lab.create_date }}
     </span>
     <span class="user">
-      <a href="{% url 'profile' project.create_user.username %}"><img src="{{ project.create_user.profile.get_picture }}"></a>
-      <a href="{% url 'profile' project.create_user.username %}">{{ project.create_user.profile.get_screen_name }}</a>
+      <a href="{% url 'profile' lab.create_user.username %}"><img src="{{ lab.create_user.profile.get_picture }}"></a>
+      <a href="{% url 'profile' lab.create_user.username %}">{{ lab.create_user.profile.get_screen_name }}</a>
     </span>
     <span class="comments">
       <span class="glyphicon glyphicon-comment"></span>
-      {{ project.get_comments.count }} Comments
+      {{ lab.get_comments.count }} Comments
     </span>
     <span class="edit">
-      <a href="{% url 'edit_project' project.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
+      <a href="{% url 'edit_lab' lab.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
     </span>
   </div>
   <div class="content">
-    {{ project.get_description_as_markdown|safe }}
+    {{ lab.get_description_as_markdown|safe }}
   </div>
-  {% if project.get_tags %}
+  {% if lab.get_tags %}
     <div class="tags">
-      {% for tag in project.get_tags %}
+      {% for tag in lab.get_tags %}
         <a href="{% url 'tag' tag.tag %}"><span class="label label-default">{{ tag }}</span></a>
       {% endfor %}
     </div>
   {% endif %}
-</project>
+</lab>
