--- a/bootcamp/projects/templates/projects/projects.html
+++ b/bootcamp/projects/templates/projects/projects.html
@@ -42,7 +42,7 @@ $(document).ready(function() {
 	
   <div class="page-header">
     <a href="{% url 'write' %}" class="btn btn-primary pull-right">
-      <span class="glyphicon glyphicon-pencil"></span> {% trans 'Write project' %}
+      <span class="glyphicon glyphicon-pencil"></span> {% trans 'Add project' %}
     </a>
     <a href="{% url 'drafts' %}" class="btn btn-default pull-right" style="margin-right: .8em">{% trans 'Drafts' %}</a>
     <h1>{% trans 'Projects' %}</h1>
