--- a/bootcamp/projects/templates/projects/write.html
+++ b/bootcamp/projects/templates/projects/write.html
@@ -3,11 +3,11 @@
 {% load i18n %}
 
 {% block head %}
-  <script src="{% static 'js/projects.js' %}"></script>
+<script src="{% static 'js/projects.js' %}"></script>
 {% endblock head %}
 
 {% block main %}
-  <script type="text/javascript">
+<script type="text/javascript">
                                     $(document).ready(function() {
                                       
 									    
@@ -38,95 +38,149 @@
     }); 
     });
                                     
-                                </script>
-	
 
-  <ol class="breadcrumb">
+</script>
+
+
+<ol class="breadcrumb">
     <li><a href="{% url 'projects' %}">{% trans 'projects' %}</a></li>
     <li class="active">{% trans 'Write project' %}</li>
-  </ol>
-  <form action="{% url 'write' %}" method="post" role="form">
+</ol>
+<form action="{% url 'write' %}" method="post" role="form">
     {% csrf_token %}
     {{ form.status }}
     {% for field in form.visible_fields %}
-      <div class="form-group{% if field.errors %} has-error{% endif %}">
+    <div class="form-group{% if field.errors %} has-error{% endif %}">
         <label for="{{ field.label }}" class="control-label">{{ field.label }}</label>
         {% if field.label == 'Content' %}
-          {% include 'markdown_editor.html' with textarea='id_content' %}
+        {% include 'markdown_editor.html' with textarea='id_content' %}
         {% endif %}
         {{ field }}
         {% if field.help_text %}
-          <span class="help-block">{{ field.help_text }}</span>
+        <span class="help-block">{{ field.help_text }}</span>
         {% endif %}
         {% for error in field.errors %}
-          <label class="control-label">{{ error }}</label>
+        <label class="control-label">{{ error }}</label>
         {% endfor %}
-      </div>
+    </div>
     {% endfor %}
     <fieldset id="material_information" class="">
-					<legend>Add Materials</legend>
-			
-              <div class="col-md-12" >
-                <div id="field">
+        <legend>Add Materials</legend>
+
+        <div class="col-md-12">
+            <div id="field">
                 <div id="field0">
 
-<!-- Text input-->
-<div class="form-group">
- <label class="col-md-3">Material Name*</label>
- <div class="col-md-8">
- <input type="text"  name="material[]" id="material" class="form-control" list= {{form.material_name}} > 
-</div>
-</div>
-<br><br>
+                    <!-- Text input-->
+                    <div class="form-group">
+                        <label class="col-md-3">Material Name*</label>
+                        <div class="col-md-8">
+                            <input type="text" name="material[]" id="material" class="form-control"
+                                   list={{form.material_name}}>
+                        </div>
+                    </div>
+                    <br><br>
 
-<!-- Text input-->
-<div class="form-group">
- <label class="col-md-3">Material Category*</label>
- <div class="col-md-8">
- <input type="text"  name="category[]" id="category" class="form-control" list= {{form.category_list}} > 
-</div>
-</div>
-<br><br>
+                    <!-- Text input-->
+                    <div class="form-group">
+                        <label class="col-md-3">Material Category*</label>
+                        <div class="col-md-8">
+                            <input type="text" name="category[]" id="category" class="form-control"
+                                   list={{form.category_list}}>
+                        </div>
+                    </div>
+                    <br><br>
 
-<hr>
+                    <hr>
 
 
-</div><!--end field0-->
-</div><!--end field-->
-  <!-- Button -->
-<div class="form-group">
-  <div class="col-md-4 col-md-offset-8">
-    <button id="add-more" name="add-more" class="btn btn-primary">Add More</button>
-  </div>
-</div>
-<br><br>      
+                </div><!--end field0-->
+            </div><!--end field-->
+            <!-- Button -->
+            <div class="form-group">
+                <div class="col-md-4 col-md-offset-8">
+                    <button id="add-more" name="add-more" class="btn btn-primary">Add More</button>
+                </div>
             </div>
-					
-				</fieldset>
-				 				
-				
-    
-    <div class="form-group">
-      <button type="button" class="btn btn-primary publish">{% trans 'Publish' %}</button>
-      <button type="button" class="btn btn-default draft">{% trans 'Save Draft' %}</button>
-      <button type="button" class="btn btn-default preview" data-toggle="modal" data-target="#preview">{% trans 'Preview' %}</button>
-      <a href="{% url 'projects' %}" class="btn btn-default">{% trans 'Cancel' %}</a>
-    </div>
-  </form>
+            <br><br>
+        </div>
 
-  <div class="modal fade" id="preview">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-          <h4 class="modal-title">Project Preview</h4>
+    </fieldset>
+
+    <fieldset id="device_information" class="">
+        <legend>Add Devices</legend>
+
+        <div class="col-md-12">
+            <div id="devicefield">
+                <div id="devicefield0">
+
+                    <!-- Text input-->
+                    <div class="form-group">
+                        <label class="col-md-3">Device Name*</label>
+                        <div class="col-md-8">
+                            <input type="text" name="device[]" id="device" class="form-control"
+                                   list={{form.device_name}}>
+                        </div>
+                    </div>
+                    <br><br>
+
+                    <!-- Text input-->
+                    <div class="form-group">
+                        <label class="col-md-3">Device id*</label>
+                        <div class="col-md-8">
+                            <input type="text" name="device_identification[]" id="device_identification" class="form-control"
+                                   list={{form.device_identification}}>
+                        </div>
+                    </div>
+                    <br><br>
+
+                    <div class="form-group">
+                        <label class="col-md-3">Device Location*</label>
+                        <div class="col-md-8">
+                            <input type="text" name="device_location[]" id="device_location" class="form-control"
+                                   list={{form.device_location}}>
+                        </div>
+                    </div>
+                    <br><br>
+
+                    <hr>
+
+
+                </div><!--end field0-->
+            </div><!--end field-->
+            <!-- Button -->
+            <div class="form-group">
+                <div class="col-md-4 col-md-offset-8">
+                    <button id="add-more-device" name="add-more" class="btn btn-primary">Add More</button>
+                </div>
+            </div>
+            <br><br>
         </div>
-        <div class="modal-body"></div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        </div>
-      </div>
+
+    </fieldset>
+
+    <div class="form-group">
+        <button type="button" class="btn btn-primary publish">{% trans 'Publish' %}</button>
+        <button type="button" class="btn btn-default draft">{% trans 'Save Draft' %}</button>
+        <button type="button" class="btn btn-default preview" data-toggle="modal" data-target="#preview">{% trans 'Preview' %}
+        </button>
+        <a href="{% url 'projects' %}" class="btn btn-default">{% trans 'Cancel' %}</a>
     </div>
-  </div>
+</form>
+
+<div class="modal fade" id="preview">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <h4 class="modal-title">Project Preview</h4>
+            </div>
+            <div class="modal-body"></div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
 
 {% endblock main %}
