--- a/bootcamp/samples/templates/samples/partial_sample.html
+++ b/bootcamp/samples/templates/samples/partial_sample.html
@@ -1,32 +1,32 @@
-<project>
-  <h2><a href="{% url 'project' project.slug %}">{{ project.title }}</a></h2>
-  
-  
+<sample>
+  <h2><a href="{% url 'sample' sample.slug %}">{{ sample.title }}</a></h2>
+
+
   <div class="info">
     <span class="date">
       <span class="glyphicon glyphicon-calendar"></span>
-      {{ project.create_date }}
+      {{ sample.create_date }}
     </span>
     <span class="user">
-      <a href="{% url 'profile' project.create_user.username %}"><img src="{{ project.create_user.profile.get_picture }}"></a>
-      <a href="{% url 'profile' project.create_user.username %}">{{ project.create_user.profile.get_screen_name }}</a>
+      <a href="{% url 'profile' sample.create_user.username %}"><img src="{{ sample.create_user.profile.get_picture }}"></a>
+      <a href="{% url 'profile' sample.create_user.username %}">{{ sample.create_user.profile.get_screen_name }}</a>
     </span>
     <span class="comments">
       <span class="glyphicon glyphicon-comment"></span>
-      {{ project.get_comments.count }} Comments
+      {{ sample.get_comments.count }} Comments
     </span>
     <span class="edit">
-      <a href="{% url 'edit_project' project.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
+      <a href="{% url 'edit_sample' sample.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
     </span>
   </div>
   <div class="content">
-    {{ project.get_description_as_markdown|safe }}
+    {{ sample.get_description_as_markdown|safe }}
   </div>
-  {% if project.get_tags %}
+  {% if sample.get_tags %}
     <div class="tags">
-      {% for tag in project.get_tags %}
+      {% for tag in sample.get_tags %}
         <a href="{% url 'tag' tag.tag %}"><span class="label label-default">{{ tag }}</span></a>
       {% endfor %}
     </div>
   {% endif %}
-</project>
+</sample>
