added new files

--- a/bootcamp/authentication/templates/authentication/signup.html
+++ b/bootcamp/authentication/templates/authentication/signup.html
@@ -13,7 +13,7 @@
 {% endblock head %}
 
 {% block body %}
-  <h1 class="logo"><a href="{% url 'home' %}">Poseidon</a></h1>
+  <h1 class="logo"><a href="{% url 'home' %}">Equipment Lab Automation</a></h1>
   <div class="signup">
     <h2>{% trans 'Sign up' %}</h2>
     <form action="{% url 'signup' %}" method="post" role="form">
