--- a/bootcamp/projects/templates/projects/write.html
+++ b/bootcamp/projects/templates/projects/write.html
@@ -73,7 +73,7 @@
 
                     <!-- Text input-->
                     <div class="form-group">
-                        <label class="col-md-3">Material Name*</label>
+                        <label class="col-md-3">Material Name</label>
                         <div class="col-md-8">
                             <input type="text" name="material[]" id="material" class="form-control"
                                    list={{form.material_name}}>
@@ -83,7 +83,7 @@
 
                     <!-- Text input-->
                     <div class="form-group">
-                        <label class="col-md-3">Material Category*</label>
+                        <label class="col-md-3">Material Category</label>
                         <div class="col-md-8">
                             <input type="text" name="category[]" id="category" class="form-control"
                                    list={{form.category_list}}>
@@ -116,7 +116,7 @@
 
                     <!-- Text input-->
                     <div class="form-group">
-                        <label class="col-md-3">Device Name*</label>
+                        <label class="col-md-3">Device Name</label>
                         <div class="col-md-8">
                             <input type="text" name="device[]" id="device" class="form-control"
                                    list={{form.device_name}}>
@@ -126,7 +126,7 @@
 
                     <!-- Text input-->
                     <div class="form-group">
-                        <label class="col-md-3">Device id*</label>
+                        <label class="col-md-3">Device id</label>
                         <div class="col-md-8">
                             <input type="text" name="device_identification[]" id="device_identification" class="form-control"
                                    list={{form.device_identification}}>
@@ -135,7 +135,7 @@
                     <br><br>
 
                     <div class="form-group">
-                        <label class="col-md-3">Device Location*</label>
+                        <label class="col-md-3">Device Location</label>
                         <div class="col-md-8">
                             <input type="text" name="device_location[]" id="device_location" class="form-control"
                                    list={{form.device_location}}>
