--- a/bootcamp/samples/templates/samples/samples.html
+++ b/bootcamp/samples/templates/samples/samples.html
@@ -41,10 +41,10 @@ $(document).ready(function() {
 
 	
   <div class="page-header">
-    <a href="{% url 'write' %}" class="btn btn-primary pull-right">
+    <a href="{% url 'sample_add' %}" class="btn btn-primary pull-right">
       <span class="glyphicon glyphicon-pencil"></span> {% trans 'Add sample' %}
     </a>
-    <a href="{% url 'drafts' %}" class="btn btn-default pull-right" style="margin-right: .8em">{% trans 'Drafts' %}</a>
+    <a href="{% url 'sample_drafts' %}" class="btn btn-default pull-right" style="margin-right: .8em">{% trans 'Drafts' %}</a>
     <h1>{% trans 'Samples' %}</h1>
   </div>
   <div class="row">
@@ -90,7 +90,7 @@ $(document).ready(function() {
     <div class="col-md-2 popular-tags">
       <h4>{% trans 'Popular Tags' %}</h4>
       {% for tag, count in popular_tags %}
-        <a href="{% url 'tag' tag %}"><span class="label label-default">{{ count }} {{ tag }}</span></a>
+        <a href="{% url 'sample_tag' tag %}"><span class="label label-default">{{ count }} {{ tag }}</span></a>
       {% endfor %}
     </div>
   </div>
