--- a/bootcamp/core/static/css/profile.css
+++ b/bootcamp/core/static/css/profile.css
@@ -15,3 +15,21 @@
 .user-profile ul li {
   list-style: none;
 }
+
+.section {
+    background: #e1e2e3;
+    margin-bottom: 10px;
+    padding-bottom: 10px;
+}
+
+a:hover{
+    text-decoration: none
+}
+
+.clickable: {
+    color: black;
+}
+.clickable:hover{
+    background: silver; /* make this whatever you want */
+    cursor: pointer;
+}
