--- a/bootcamp/core/templates/core/cover.html
+++ b/bootcamp/core/templates/core/cover.html
@@ -9,7 +9,7 @@
 {% block body %}
   <a href="http://mined.gatech.edu/"><img style="position: absolute; top: 0; right: 0; border: 0;" src="{% static 'img/MINEDlogo.png' %}"></a>
   <div class="cover">
-    <h1 class="logo">Poseidon</h1>
+    <h1 class="logo">Equipment Lab Automation</h1>
     {% if form.non_field_errors %}
       {% for error in form.non_field_errors %}
         <div class="alert alert-danger alert-dismissable">
@@ -38,7 +38,7 @@
         </div>
         <div class="form-group">
           <button type="submit" class="btn btn-default">{% trans 'Log in' %}</button>
-          <a href="{% url 'signup' %}" class="btn btn-link">{% trans 'Sign up for Poseidon' %}</a>
+          <a href="{% url 'signup' %}" class="btn btn-link">{% trans 'Sign up for Equipment Lab Automation' %}</a>
         </div>
       </form>
     </div>
