--- a/bootcamp/devices/templates/devices/device.html
+++ b/bootcamp/devices/templates/devices/device.html
@@ -80,9 +80,15 @@
         </div>
         <div class="col-md-4">
             <div class="row">
-                <div id="picture">
+                <div class="pictures">
                     <h2>Images</h2>
-                    <img src="{{ device.picture }}" />
+                    {% for picture, picture_name in device.get_pictures %}
+                        <a href="{{picture}}" data-toggle="lightbox" data-gallery="example-gallery">
+                            <img class="device-picture" id="{{ picture_name }}" src="{{ picture }}" />
+                        </a>
+                    {% empty %}
+                        <span></span>
+                    {% endfor %}
                 </div>
             </div>
         </div>
@@ -92,7 +98,7 @@
         {% if device.get_tags %}
         <div class="tags">
             {% for tag in device.get_tags %}
-            <a href="{% url 'tag' tag.tag %}"><span class="label label-default">{{ tag }}</span></a>
+            <a href="{% url 'device_tag' tag.tag %}"><span class="label label-default">{{ tag }}</span></a>
             {% endfor %}
         </div>
         {% endif %}
@@ -105,7 +111,14 @@
 <!-- Placed at the end of the document so the pages load faster -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/4.0.1/ekko-lightbox.min.js"></script>
+<link href="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/4.0.1/ekko-lightbox.min.css" rel="stylesheet">
+<script>
+    $(document).on('click', '[data-toggle="lightbox"]', function(event) {
+    event.preventDefault();
+    $(this).ekkoLightbox();
+});
+</script>
 
 {% include 'devices/partial_device_comments.html' with device=device %}
 {% endblock main %}
