--- a/bootcamp/devices/templates/devices/partial_device.html
+++ b/bootcamp/devices/templates/devices/partial_device.html
@@ -25,7 +25,7 @@
   {% if device.get_tags %}
     <div class="tags">
       {% for tag in device.get_tags %}
-        <a href="{% url 'tag' tag.tag %}"><span class="label label-default">{{ tag }}</span></a>
+        <a href="{% url 'device_tag' tag.tag %}"><span class="label label-default">{{ tag }}</span></a>
       {% endfor %}
     </div>
   {% endif %}
