--- a/bootcamp/samples/templates/samples/edit.html
+++ b/bootcamp/samples/templates/samples/edit.html
@@ -9,7 +9,7 @@
 {% block main %}
   <ol class="breadcrumb">
     <li><a href="{% url 'samples' %}">{% trans 'samples' %}</a></li>
-    <li><a href="{% url 'drafts' %}">{% trans 'Drafts' %}</a></li>
+    <li><a href="{% url 'samples_drafts' %}">{% trans 'Drafts' %}</a></li>
     <li class="active">{% trans 'Edit' %}</li>
   </ol>
   <form action="{% url 'edit_sample' form.instance.pk %}" method="post" role="form">
@@ -33,7 +33,7 @@
     <div class="form-group">
       <button type="button" class="btn btn-primary publish">{% trans 'Publish' %}</button>
       <button type="button" class="btn btn-default draft">{% trans 'Save Draft' %}</button>
-      <a href="{% url 'drafts' %}" class="btn btn-default">{% trans 'Cancel' %}</a>
+      <a href="{% url 'samples_drafts' %}" class="btn btn-default">{% trans 'Cancel' %}</a>
     </div>
   </form>
 {% endblock main %}
